fixed overflow issue on the Bank Page

--- a/src/styles/bank-page.scss
+++ b/src/styles/bank-page.scss
@@ -67,5 +67,6 @@
     justify-content: center;
     padding-left: 15px;
     padding-top: 20px;
+    width: 420px;
   }
 }
