--- a/src/styles/bank-table.scss
+++ b/src/styles/bank-table.scss
@@ -31,7 +31,7 @@
   padding: 15px;
 
   @include sm {
-    gap: 15px;
+    gap: 20px;
     padding: 10px;
   }
 }
